--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,169 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
-    android:orientation="vertical"
-    android:weightSum="1"
-    tools:context="lt.radio1.radio.MainActivity">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <ViewFlipper
-        android:id="@+id/view_flipper"
+    <include
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:autoStart="true"
-        android:flipInterval="5000"
-        android:inAnimation="@anim/slide_in_right"
-        android:outAnimation="@anim/slide_out_left"
-        android:layout_weight="1">
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" />
 
-        <ImageView
-            android:id="@+id/image1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/slide02" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/slide03" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/slide01" />
-
-    </ViewFlipper>
-
-    <TextView
-        android:id="@+id/song_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ellipsize="marquee"
-        android:textColor="@color/colorAccent"
-        android:fadingEdge="horizontal"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:gravity="center"
-        android:background="#552c6887"
-        android:fontFamily="sans-serif-light"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:requiresFadingEdge="horizontal"
-        android:scrollHorizontally="true"
-        android:singleLine="true"
-        android:text="this is a very long piece of text that will move"
-        android:textSize="18sp" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/control"
-            android:layout_alignTop="@+id/control">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight=".5"
-                    android:src="@drawable/mic2" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight=".5"
-                    android:src="@drawable/mic1" />
-
-            </LinearLayout>
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/control"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:weightSum="2">
-
-            <RelativeLayout
-                android:id="@+id/start_stop_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:background="@drawable/color_transition">
-
-                <ImageView
-                    android:id="@+id/wave_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/m_start_play"
-                    android:layout_alignTop="@+id/m_start_play"
-                    android:layout_centerHorizontal="true"
-                    android:src="@drawable/wave1" />
-
-                <ImageButton
-                    android:id="@+id/m_start_play"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:background="@color/colortTransparent"
-                    android:src="@drawable/ic_play_arrow_white_48dp" />
-
-                <ImageButton
-                    android:id="@+id/m_stop_play"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:background="@color/colortTransparent"
-                    android:src="@drawable/ic_pause_white_48dp" />
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:id="@+id/volume"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:background="#18394a"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:id="@+id/volume_down"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colortTransparent"
-                    android:src="@drawable/ic_volume_down_white_48dp" />
-
-                <SeekBar
-                    android:id="@+id/seekBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="3" />
-
-                <ImageButton
-                    android:id="@+id/volume_up"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colortTransparent"
-                    android:src="@drawable/ic_volume_up_white_48dp" />
-
-            </LinearLayout>
-        </LinearLayout>
-
-    </RelativeLayout>
-</LinearLayout>
-
+</android.support.v4.widget.DrawerLayout>
