--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="#78909C"
-        android:centerColor="#607D8B"
-        android:endColor="#455A64"
-        android:type="linear"
-        android:angle="135"/>
+        android:startColor="#6ba7c6"
+        android:centerColor="#4083a6"
+        android:endColor="#6ba7c6"
+        android:angle="90"/>
 </shape>
