--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="lt.radio1.radio.MainActivity">
+    tools:context="lt.radio1.radio1.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
