--- a/app/src/main/res/layout/c_activity_main.xml
+++ b/app/src/main/res/layout/c_activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="lt.radio1.radio.ContactsActivity">
+    tools:context="lt.radio1.radio1.ContactsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
