--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:weightSum="1"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="lt.radio1.radio.MainActivity"
+    tools:context="lt.radio1.radio1.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
     <ViewFlipper
